--- a/src/App.css
+++ b/src/App.css
@@ -10,3 +10,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+.route-bg-container {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
