--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -1,102 +1,98 @@
-.main-header-section {
-  height: 15vh;
-  overflow-y: hidden;
-}
-.header-nav-section-container {
+.header-container {
+  background-color: #272727;
+  padding: 15px 25px;
   position: fixed;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  background-color: rgb(58, 57, 57);
-  height: 15vh;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 105px;
 }
 
-.mobile-view-header-container {
+.mobile-navbar {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 90%;
 }
-@media screen and (min-width: 576px) {
-  .mobile-view-header-container {
+
+.desktop-navbar {
+  display: none;
+  justify-content: space-between;
+  align-items: center;
+}
+
+@media screen and (min-width: 768px) {
+  .header-container {
+    padding: 25px 45px;
+    height: 105px;
+  }
+
+  .mobile-navbar {
     display: none;
   }
-}
-.mobile-view-link {
-  text-decoration: none;
-  cursor: pointer;
-  margin-right: 15px;
+
+  .desktop-navbar {
+    display: flex;
+  }
 }
 
-.mobile-view-app-logo-image {
-  width: 90px;
+.header-logo {
+  width: 85px;
 }
 
-.mobile-view-nav-items {
+@media screen and (min-width: 768px) {
+  .header-logo {
+    width: 150px;
+  }
+}
+
+.route-icons-container {
   display: flex;
-  align-items: center;
-  padding-left: 0px;
-}
-.nav-item {
+  padding-left: 0;
   list-style: none;
 }
-.mobile-view-logout-icon-button {
+
+.route-icons-container li {
+  margin-left: 25px;
+}
+
+.route-icons-container button {
+  padding: 0;
+  border: 0;
   background-color: transparent;
-  border: none;
-  padding: 0px;
+  cursor: pointer;
+  color: #fff;
 }
 
-.header-container {
+.route-icon {
+  width: 25px;
+  height: 25px;
+}
+
+.route-items {
+  padding-left: 0;
+  list-style: none;
   display: flex;
-  align-items: center;
-  justify-content: space-between;
-  width: 90%;
-}
-@media screen and (max-width: 575px) {
-  .header-container {
-    display: none;
-  }
 }
 
-.app-logo-image {
-  width: 100px;
-}
-@media screen and (min-width: 768px) {
-  .app-logo-image {
-    width: 120px;
-  }
+.route-items li {
+  margin-left: 25px;
 }
 
-.logo-link {
-  text-decoration: none;
-  color: white;
-}
-
-.home-item-link {
-  text-decoration: none;
-  color: white;
-  margin-right: 18px;
-  cursor: pointer;
-  font-size: 16px;
+.nav-link {
+  color: #f1f5f9;
+  font-family: Roboto;
   font-weight: 500;
-}
-
-.jobs-item-link {
-  text-decoration: none;
-  color: white;
-  cursor: pointer;
   font-size: 16px;
-  font-weight: 500;
+  text-decoration: none;
 }
 
 .logout-button {
-  background-color: rgb(99, 102, 241);
-  padding: 8px 20px;
-  font-weight: 600;
-  border-radius: 6px;
-  border: none;
+  padding: 8px 16px;
+  border-radius: 8px;
+  background-color: #4f46e5;
+  color: #fff;
+  font-family: Roboto;
+  font-size: 14px;
+  font-weight: 500;
   cursor: pointer;
-  color: white;
 }
