--- a/src/components/Home/index.css
+++ b/src/components/Home/index.css
@@ -1,77 +1,60 @@
 .home-route-container {
-  min-height: 100vh;
-  overflow-y: hidden;
+  flex-grow: 1;
   background-image: url('https://assets.ccbp.in/frontend/react-js/home-sm-bg.png');
   background-size: cover;
+  padding: 50px 25px;
+  color: aliceblue;
 }
-@media screen and (min-width: 562px) {
+
+@media screen and (min-width: 768px) {
   .home-route-container {
     background-image: url('https://assets.ccbp.in/frontend/react-js/home-lg-bg.png');
+    padding-top: 100px;
+    padding-left: 50px;
   }
 }
 
-.home-main-container {
-  min-height: 100vh;
-  overflow-y: auto;
-  width: 100%;
+.home-route-heading {
+  margin-top: 0;
+  margin-bottom: 25px;
+  font-family: Roboto;
+  font-size: 45px;
+  font-weight: 600;
+  color: #f1f5f9;
+  max-width: 350px;
 }
 
-.home-container {
-  padding: 6%;
-  max-width: 500px;
-}
-@media screen and (min-width: 1000px) {
-  .home-container {
+@media screen and (min-width: 768px) {
+  .home-route-heading {
+    font-size: 65px;
     max-width: 650px;
   }
 }
 
-.home-heading {
-  font-size: 28px;
-  color: white;
+.home-route-description {
+  max-width: 350px;
+  margin-top: 0;
+  margin-bottom: 25px;
+  font-family: Roboto;
+  font-size: 14px;
+  font-weight: 500;
+  color: #cbd5e1;
 }
-@media screen and (min-width: 562px) {
-  .home-heading {
-    font-size: 34px;
-  }
-}
+
 @media screen and (min-width: 768px) {
-  .home-heading {
-    font-size: 40px;
+  .home-route-description {
+    font-size: 18px;
+    max-width: 650px;
   }
 }
 
-.home-description {
-  font-size: 13px;
+.find-jobs-button {
+  padding: 12px 24px;
+  font-size: 14px;
+  font-family: Roboto;
   font-weight: 500;
-  color: white;
-  line-height: 25px;
-  padding: 10px 0px;
-}
-@media screen and (min-width: 562px) {
-  .home-description {
-    font-size: 15px;
-  }
-}
-
-.find-job-button {
-  background-color: rgb(99, 102, 241);
-  padding: 8px 16px;
-  border-radius: 6px;
-  border: none;
+  color: #fff;
+  background-color: #6366f1;
   cursor: pointer;
-  color: white;
-  margin-top: 10px;
-  font-size: 16px;
-  font-weight: 500;
-}
-@media screen and (min-width: 562px) {
-  .find-job-button {
-    padding: 12px 22px;
-    border-radius: 6px;
-  }
-}
-
-.find-job-link {
-  text-decoration: none;
+  border-radius: 8px;
 }
