--- a/src/components/JobItemDetails/index.css
+++ b/src/components/JobItemDetails/index.css
@@ -1,134 +1,210 @@
-.job-item-details-route-container {
-  height: 100vh;
-  overflow-y: hidden;
-  width: 100%;
-}
-
-.job-item-details-main-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background-color: black;
-  overflow-y: auto;
-  height: 85vh;
-}
 .job-item-details-container {
-  padding: 15px;
+  flex-grow: 1;
+  background-color: #000000;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  width: 100%;
-  max-width: 1300px;
+  padding: 45px 35px;
 }
 
-.description-and-website-visit-item {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+@media screen and (max-width: 767px) {
+  .job-item-details-container {
+    padding: 25px !important;
+  }
 }
 
-.visit-link {
+.job-details-succes-view {
+  align-self: center;
+  width: 80%;
+  max-width: 1100px;
+}
+
+.job-details-card {
+  padding: 35px 25px;
+  border-radius: 12px;
+  background-color: #272727;
+  color: #f1f5f9;
+}
+
+@media screen and (max-width: 767px) {
+  .job-details-succes-view {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .job-item-details-container {
+    padding: 35px 15px;
+  }
+
+  .job-details-card {
+    width: 100%;
+    padding: 15px;
+  }
+}
+
+.job-item-header {
   display: flex;
   align-items: center;
-  border: none;
-  background-color: transparent;
-  cursor: pointer;
-  text-decoration: none;
 }
-.Visit-text {
-  padding-right: 5px;
-  font-size: 15px;
+
+.company-logo-image {
+  width: 55px;
+  height: 55px;
+  margin-right: 15px;
+}
+
+.job-name-rating-container {
+  flex-grow: 1;
+}
+
+.job-title {
+  margin: 0;
+  font-family: Roboto;
+  font-size: 24px;
+  font-weight: 600;
+  margin-bottom: 8px;
+}
+
+.star-rating-container {
+  display: flex;
+  align-items: center;
+}
+
+.star-icon {
+  height: 20px;
+  width: 20px;
+  margin-right: 8px;
+  color: #fbbf24;
+}
+
+.rating-text {
+  margin: 0;
+  font-family: Roboto;
+  font-size: 16px;
   font-weight: 500;
-  color: blue;
 }
-.skills-container {
+
+.job-item-info-container {
+  margin-top: 15px;
   display: flex;
   align-items: center;
-  flex-wrap: wrap;
-  padding-left: 0px;
 }
-.skills-heading {
-  color: white;
-  font-size: 14px;
-  margin-top: 20px;
-}
-.life-at-company-heading {
-  color: white;
-  font-size: 14px;
-  margin-top: 20px;
-}
-.life-at-company-container {
-  display: flex;
-  flex-direction: column;
-}
-.life-at-company-description {
-  color: white;
-  font-size: 13px;
+
+.job-item-info-container p {
+  margin: 0;
+  font-family: Roboto;
   font-weight: 400;
-  line-height: 18px;
+  color: #cbd5e1;
 }
+
+.job-item-info-container .salary {
+  margin-left: auto;
+  font-weight: 600;
+  font-size: 18px;
+  color: #f1f5f9;
+}
+
+.location-icon {
+  height: 20px;
+  width: 20px;
+  margin-right: 5px;
+}
+
+.job-icon {
+  height: 20px;
+  width: 20px;
+  margin-left: 30px;
+  margin-right: 15px;
+}
+
+.separator {
+  border: 1px solid #7e858e;
+  margin-top: 15px;
+}
+
+.job-description-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.job-item-details-subheading {
+  margin-bottom: 15px;
+  font-family: Roboto;
+  font-weight: 500;
+}
+
+@media screen and (max-width: 767px) {
+  .job-item-details-subheading {
+    font-size: 24px;
+  }
+}
+
+.job-description-header a {
+  text-decoration: none;
+  color: #6366f1;
+  font-family: Roboto;
+  font-size: 24px;
+  font-weight: 500;
+  display: flex;
+  align-items: center;
+}
+
+.visit-icon {
+  height: 22px;
+  width: 22px;
+  margin-left: 8px;
+}
+
+.similar-jobs-heading {
+  color: #f1f5f9;
+}
+
+.similar-jobs-container {
+  padding-left: 0;
+  display: flex;
+  border-radius: 12px;
+  flex-wrap: wrap;
+}
+
+.skills-list-container {
+  padding-left: 0;
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.skills-list-container li {
+  margin-right: 15px;
+  margin-bottom: 15px;
+  display: flex;
+  align-items: center;
+  flex-grow: 1;
+  min-width: 280px;
+}
+
+.skills-list-container li p {
+  font-family: Roboto;
+  font-size: 16px;
+  font-weight: 500;
+  color: #f1f5f9;
+}
+
+.skill-image {
+  width: 55px;
+  margin-right: 15px;
+}
+
 .life-at-company-image {
   width: 100%;
 }
-.similar-job-heading {
-  color: white;
-  font-size: 17px;
-}
-.similar-job-items-container {
-  padding: 0px;
-}
-
-.job-details-loader-container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  height: 80vh;
-}
-
-@media screen and (min-width: 576px) {
-  .job-item-card-container-largest-view {
-    padding: 30px;
-    margin: 30px 7%;
-  }
-  .life-at-company-container {
-    display: flex;
-    flex-direction: row;
-  }
-  .life-at-company-image {
-    width: 35%;
-  }
-  .life-at-company-description {
-    width: 65%;
-    padding-right: 20px;
-  }
-
-  .similar-job-heading {
-    font-size: 20px;
-    margin: 5px 7%;
-  }
-
-  .similar-job-items-container {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    flex-wrap: wrap;
-    margin: 20px 7%;
-  }
-}
 
 @media screen and (min-width: 768px) {
-  .skills-heading {
-    font-size: 17px;
+  .job-item-details-life-style-container {
+    display: flex;
   }
-  .life-at-company-heading {
-    font-size: 17px;
-  }
-  .life-at-company-description {
-    font-size: 15px;
-    line-height: 30px;
-  }
-  .Visit-text {
-    font-size: 17px;
+  .life-at-company-image {
+    width: 350px;
+    margin-left: 35px;
   }
 }
