--- a/src/components/JobItems/index.css
+++ b/src/components/JobItems/index.css
@@ -1,113 +1,101 @@
-.jobs-items-container {
-  padding: 10px 0px;
+.job-item-container {
+  padding: 25px;
+  background-color: #272727;
+  border-radius: 12px;
+  margin-bottom: 25px;
 }
 
-.job-item-card-link {
+.job-link {
   text-decoration: none;
+  color: #f1f5f9;
 }
 
-.job-item-card-container {
-  list-style: none;
-  background-image: radial-gradient(rgb(110, 110, 110), rgb(68, 68, 68));
-  padding: 15px 10px;
-  margin-bottom: 18px;
-  border-radius: 10px;
-}
-
-.company-logo-and-job-title-item {
+.job-item-header {
   display: flex;
   align-items: center;
 }
+
 .company-logo-image {
-  width: 40px;
+  width: 55px;
+  height: 55px;
+  margin-right: 15px;
 }
-.job-title-and-rating-item {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  padding-left: 6px;
+
+.job-name-rating-container {
+  flex-grow: 1;
 }
+
 .job-title {
-  font-size: 14px;
-  color: white;
   margin: 0;
-  padding-bottom: 4px;
-}
-.rating-item {
-  display: flex;
-  align-items: center;
-  margin: 0;
-}
-.rating {
-  font-size: 14px;
-  font-weight: 500;
-  color: white;
-  margin: 0;
-  padding-left: 4px;
+  font-family: Roboto;
+  font-size: 24px;
+  font-weight: 600;
+  margin-bottom: 8px;
 }
 
-.location-and-salary-package-item {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding-bottom: 10px;
-  border-bottom: solid 3px rgb(148, 148, 148);
-}
-.location-and-employment-type-item {
+.star-rating-container {
   display: flex;
   align-items: center;
 }
-.location-item {
-  display: flex;
-  align-items: center;
-  padding-right: 13px;
+
+.star-icon {
+  height: 20px;
+  width: 20px;
+  margin-right: 8px;
+  color: #fbbf24;
 }
-.location {
-  font-size: 13px;
-  color: white;
-  padding-left: 3px;
-}
-.employment-item {
-  display: flex;
-  align-items: center;
-}
-.employment-type {
-  font-size: 13px;
-  color: white;
-  padding-left: 3px;
-}
-.salary-package {
-  font-size: 14px;
-  color: white;
+
+.rating-text {
+  margin: 0;
+  font-family: Roboto;
+  font-size: 16px;
   font-weight: 500;
 }
-.description-heading {
-  color: white;
-  font-size: 14px;
-  font-weight: 500;
+
+.job-item-info-container {
+  margin-top: 15px;
+  display: flex;
+  align-items: center;
 }
-.job-description {
-  color: rgb(209, 209, 209);
-  font-size: 13px;
+
+.job-item-info-container p {
+  margin: 0;
+  font-family: Roboto;
   font-weight: 400;
-  line-height: 18px;
+  color: #cbd5e1;
 }
 
-@media screen and (min-width: 768px) {
-  .company-logo-image {
-    width: 60px;
-  }
-  .job-title {
-    padding-bottom: 10px;
-    font-size: 17px;
-  }
-  .rating {
-    font-size: 17px;
-  }
-  .description-heading {
-    font-size: 17px;
-  }
-  .job-description {
-    font-size: 14px;
-  }
+.job-item-info-container .salary {
+  margin-left: auto;
+  font-weight: 600;
+  font-size: 18px;
+  color: #f1f5f9;
+}
+
+.location-icon {
+  height: 20px;
+  width: 20px;
+  margin-right: 5px;
+}
+
+.job-icon {
+  height: 20px;
+  width: 20px;
+  margin-left: 30px;
+  margin-right: 15px;
+}
+
+.description-title {
+  font-family: Roboto;
+  font-weight: 500;
+  font-size: 18px;
+}
+
+.job-description {
+  font-family: Roboto;
+  font-size: 14px;
+  font-weight: 500;
+  color: #cbd5e1;
+  line-height: 1.8;
+  margin-top: 0;
 }
