--- a/src/components/Login/index.css
+++ b/src/components/Login/index.css
@@ -1,69 +1,66 @@
-.login-page-route-container {
-  background-color: black;
-  min-height: 100vh;
+.login-bg-container {
+  height: 100vh;
+  background-color: #000000;
   display: flex;
-  flex-direction: row;
   justify-content: center;
   align-items: center;
 }
 
-.login-form-container {
+.login-form {
+  background-color: #272727;
+  padding: 25px;
+  border-radius: 16px;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  background-color: rgb(48, 47, 47);
-  padding: 30px 15px;
-  border-radius: 10px;
-  min-width: 200px;
+  width: 80%;
   max-width: 400px;
-  flex-grow: 1;
-  margin: 0px 20px;
+  min-height: 420px;
 }
+
 .website-logo {
-  width: 40%;
-  max-width: 190px;
-  margin: 10px;
+  align-self: center;
+  margin-top: 15px;
+  margin-bottom: 35px;
 }
 
 .input-container {
   display: flex;
   flex-direction: column;
-  width: 80%;
-}
-.input-label {
-  color: white;
-  font-size: 13px;
-  margin-top: 20px;
-  margin-bottom: 4px;
+  margin-bottom: 20px;
 }
 
-.input {
-  border: none;
-  border: solid 1px rgba(128, 128, 128, 0.582);
-  width: 100%;
-  border-radius: 5px;
-  padding: 8px;
-  outline: none;
+.input-container label {
+  font-family: Roboto;
+  font-size: 12px;
+  font-weight: 500;
+  color: #f8fafc;
+  margin-bottom: 5px;
+}
+
+.input-container input {
+  padding: 10px;
+  font-family: Roboto;
+  font-size: 14px;
+  font-weight: 500;
+  color: #cbd5e1;
   background-color: transparent;
-  color: white;
+  border: 1px solid #64748b;
+  outline: none;
 }
 
 .login-button {
-  margin-top: 30px;
-  margin-bottom: 20px;
-  padding: 10px 16px;
-  color: white;
-  background-color: #4a4cbd;
-  border-radius: 5px;
-  border: none;
-  cursor: pointer;
-  outline: none;
-  width: 80%;
+  padding: 12px 24px;
+  border-radius: 8px;
+  background-color: #6366f1;
+  color: #ffffff;
+  font-family: Roboto;
+  font-size: 14px;
+  font-weight: 500;
 }
 
-.login-error-msg {
-  color: red;
-  font-size: 12px;
-  margin-top: -10px;
+.error-message {
+  color: #ff0b37;
+  font-family: Roboto;
+  font-size: 14px;
+  font-weight: 500;
 }
