--- a/src/components/SimilarJobItems/index.css
+++ b/src/components/SimilarJobItems/index.css
@@ -1,102 +1,64 @@
-.similar-job-item-card-main-container {
-  width: 100%;
-  padding: 10px;
-  max-width: 600px;
-  text-decoration: none;
-}
-
-.similar-job-item-card-container {
+.similar-job-container {
+  color: #f1f5f9;
   list-style: none;
-  padding: 15px 10px;
-  background-image: radial-gradient(rgb(110, 110, 110), rgb(68, 68, 68));
-  border-radius: 10px;
-  width: 100%;
+  background-color: #272727;
+  margin-right: 15px;
+  margin-bottom: 15px;
+  padding: 25px;
+  border-radius: 12px;
+  max-width: 350px;
 }
 
-.similar-job-company-logo-and-job-title-item {
-  display: flex;
-  align-items: center;
-}
-.similar-job-company-logo-image {
-  width: 40px;
-}
-.similar-job-title-and-rating-item {
-  display: flex;
-  flex-direction: column;
-  padding-left: 6px;
-}
-.similar-job-title {
-  font-size: 14px;
-  color: white;
-  margin: 0;
-  padding-bottom: 4px;
-}
-.similar-job-rating-item {
-  display: flex;
-  align-items: center;
-  margin: 0;
-}
-.similar-job-rating {
-  font-size: 14px;
-  font-weight: 500;
-  color: white;
-  margin: 0;
-  padding-left: 4px;
+@media screen and (max-width: 767px) {
+  .similar-job-container {
+    margin-right: 0;
+  }
 }
 
-.similar-job-location-and-salary-package-item {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-.similar-job-location-and-employment-type-item {
+.job-item-info-container {
+  margin-top: 15px;
   display: flex;
   align-items: center;
 }
-.similar-job-location-item {
-  display: flex;
-  align-items: center;
-  padding-right: 13px;
-}
-.similar-job-location {
-  font-size: 13px;
-  color: white;
-  padding-left: 3px;
-}
-.similar-job-employment-item {
-  display: flex;
-  align-items: center;
-}
-.similar-job-employment-type {
-  font-size: 13px;
-  color: white;
-  padding-left: 3px;
-}
-.similar-job-salary-package {
-  font-size: 14px;
-  color: white;
-  font-weight: 500;
-}
-.similar-job-description-heading {
-  color: white;
-  font-size: 14px;
-  font-weight: 500;
-}
-.similar-job-description {
-  color: rgb(209, 209, 209);
-  font-size: 13px;
+
+.job-item-info-container p {
+  margin: 0;
+  font-family: Roboto;
   font-weight: 400;
-  line-height: 18px;
+  color: #cbd5e1;
 }
 
-@media screen and (min-width: 576px) {
-  .similar-job-item-card-main-container {
-    width: 50%;
-  }
+.job-item-info-container .salary {
+  margin-left: auto;
+  font-weight: 600;
+  font-size: 18px;
+  color: #f1f5f9;
 }
 
-@media screen and (min-width: 992px) {
-  .similar-job-item-card-main-container {
-    width: 33%;
-  }
+.location-icon {
+  height: 20px;
+  width: 20px;
+  margin-right: 5px;
+}
+
+.job-icon {
+  height: 20px;
+  width: 20px;
+  margin-left: 30px;
+  margin-right: 15px;
+}
+
+.description-title {
+  font-family: Roboto;
+  font-weight: 500;
+  font-size: 18px;
+}
+
+.job-description {
+  font-family: Roboto;
+  font-size: 14px;
+  font-weight: 500;
+  color: #cbd5e1;
+  line-height: 1.8;
+  margin-top: 0;
 }
